data/forge_javadoc/1.7.10/raw/net/minecraft/entity/ai/attributes/BaseAttributeMap.md
---
title: "BaseAttributeMap"
description: "public abstract class BaseAttributeMap extends java.lang.Object"
package: "net/minecraft/entity/ai/attributes"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/entity/ai/attributes/BaseAttributeMap.html"
sourceType: javadoc
---

# BaseAttributeMap

**Inheritance:** java.lang.Object → net.minecraft.entity.ai.attributes.BaseAttributeMap

## Class signature

```java
public abstract class BaseAttributeMap extends java.lang.Object
```

## Constructors

- `BaseAttributeMap()`

## Methods

- `void addAttributeInstance(ModifiableAttributeInstance p_111149_1_)`
- `void applyAttributeModifiers(Multimap p_111147_1_)`
- `java.util.Collection getAllAttributes()`
- `IAttributeInstance getAttributeInstance(IAttribute p_111151_1_)`
- `IAttributeInstance getAttributeInstanceByName(java.lang.String p_111152_1_)`
- `abstract IAttributeInstance registerAttribute(IAttribute p_111150_1_)`
- `void removeAttributeModifiers(Multimap p_111148_1_)`

## Fields

- `protected java.util.Map attributes`
- `protected java.util.Map attributesByName`
